kafka done
