# storage/app.py
@@ -1,4 +1,6 @@
 from datetime import datetime
+import json
+from threading import Thread
 import connexion
 from connexion import NoContent
 from db import make_session
@@ -7,7 +9,17 @@ import yaml
 import logging
 import logging.config
 from sqlalchemy import select
+from pykafka import KafkaClient
+from pykafka.common import OffsetType 
 
+
+with open('app_conf.yml', 'r') as f:
+    app_config = yaml.safe_load(f)
+
+
+hosts=app_config['events']['hostname']
+port=app_config['events']['port']
+topic=app_config['events']['topic']
 
 with open('log_conf.yml', 'r') as f:
     log_config = yaml.safe_load(f.read())
@@ -37,7 +49,6 @@ def report_temperature_readings(body):
     session.close()
     
     logger.debug("Stored event temperature_report with a trace id of %s",body["trace_id"])
-    return NoContent, 201
 
 def report_motion_readings(body):
     """Receives a motion detection event and stores it in DB"""
@@ -63,7 +74,6 @@ def report_motion_readings(body):
     session.close()
     logger.debug("Stored event motion_report with a trace id of %s",body["trace_id"])
 
-    return NoContent, 201
 
 def get_temperature_readings(start_timestamp, end_timestamp):
     """ Gets new temperature readings between the start and end timestamps """
@@ -122,7 +132,45 @@ def get_motion_readings(start_timestamp, end_timestamp):
 
     return results
 
+def process_message():
+    """Process event messages from Kafka"""
 
+    hostname = f"{hosts}:{port}"
+    client = KafkaClient(hosts=hostname)
+
+    kafka_topic = client.topics[str.encode(topic)]
+
+    consumer = kafka_topic.get_simple_consumer(
+        consumer_group=b'event_group',
+        reset_offset_on_start=False,
+        auto_offset_reset=OffsetType.LATEST
+    )
+
+    for msg in consumer:
+
+        msg_str = msg.value.decode('utf-8')
+        msg_json = json.loads(msg_str)
+
+        logger.info("Message: %s", msg_json)
+
+        payload = msg_json["payload"]
+
+        if msg_json["type"] == "temperature_report":
+            report_temperature_readings(payload)
+
+        elif msg_json["type"] == "motion_report":
+            report_motion_readings(payload)
+
+        consumer.commit_offsets()
+
+def setup_kafka_thread():
+    t1= Thread(target=process_message)
+    t1.daemon = True
+    t1.start()
+    logger.info("Kafka consumer thread started.")
+
+
+    
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api(
@@ -134,4 +182,5 @@ app.add_api(
 application = app.app
 
 if __name__=="__main__":
+    setup_kafka_thread()
     app.run(port=8090)
